src/containers/UsersPage/UsersPage.module.css
.container {
    margin: 0 auto;
    padding-top: 60px;
    width: 96%;
    max-width: 1080px;
    position: relative;
}

.container h3 {
    margin-top: 20px;
}

.successBlock {
    background-color: #ffffff;
    border-radius: 16px;
    height: 200px;
    width: 50%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding-left: 10px;
    padding-right: 10px;
}

.successBlock p {
    margin-top: 50px;
    font-family: Roboto;
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.29;
    letter-spacing: normal;
    color: rgba(0, 0, 0, 0.55);
}

.userForm {
    background-color: #ffffff;
    width: 50%;
    margin: 0 auto;
    border-radius: 16px;
    height: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-wrap: break-word;
    hyphens: auto;
}

.userForm__field {
    width: 80%;
    padding-top: 46px;
}

.userForm__field input {
    padding-left: 2px;
    font-size: 16px;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.55);
    display: block;
    height: 20px;
    margin-bottom: 8px;
    width: calc(100% - 30px);
}

.userForm__field label {
    display: block;
    bottom: 8px;
    font-family: Roboto;
    font-size: 16px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.29;
    letter-spacing: normal;
    color: rgba(0, 0, 0, 0.55);
}

.userForm__field__activeLabel {
    font-size: 14px;
    transform: translateY(calc(-1 * 26px));
    -ms-transform: translateY(calc(-1 * 26px));
}

.userForm__button, .successBlock__button{
    position: relative;
    padding: 8px 15px;
    margin-right: 5px;
    bottom: -20px;
    display: inline-block;
}

.successBlock__button {
    padding: 8px 30px;
    display: inline-block;
    bottom: auto;
}

.packetProcessing__block {
    position: relative;
    padding: 8px 30px;
    display: inline-block;
    bottom: auto;
}

.packetProcessing__block__button {
    font-family: Roboto, serif;
    padding: 8px 15px;
    border-radius: 16px;
    line-height: 1.14;
    color: #fff;
}

.packetProcessing__block__button_green{
    background-color: #08a652;
}

.packetProcessing__block__button_red{
    background-color: #da7675;
}

::-ms-clear, ::-ms-reveal {
    display: none;
}

.error {
    margin-top: 10px;
    color: #f6650a;
    font-family: Roboto;
    padding-left: 10px;
    padding-right: 10px;
    overflow-wrap: break-word;
    width: 95%;
}
.template__link {
    padding-left: 5px;
}

